style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

* {
	margin: 0;
	padding: 0;
 	box-sizing: border-box;
}

:root {
	--primary: #eee;
	--secondary: #fff;
	--text: #000;
	--line_color: #222;
	--github: #333;
}

html {
	font-family: 'Poppins';
	font-size: 18px;
  scroll-behavior: smooth;
} 


.container {
	width: 100%;
	min-height: 100vh;

	display: flex;
	justify-content: center;
	align-items: center;
}

/* Hero */
.hero {
	width: 100%;
	height: 100vh;
	background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .8)), url('assets/penang.jpg') no-repeat center / cover;
	color: white;
}

.intro {
	width: 50%;
	height: 95%;
	margin: 0 auto;
	translate: 0 2.5%;

	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	text-align: center;
}

.hero .intro h1 {
	font-size: 3rem;
}

.hero .hero-footer {
	display: flex;
	justify-content: space-between;

	margin-left: 1rem;
	margin-right: 1rem;
}

.hero .hero-footer .intro-asterisk {
	font-size: .5rem;
	align-self: flex-end;
}

@media only screen and (max-width: 768px) {
	.hero .intro h1 {
		font-size: 1.6rem;
	}
	.hero .hero-footer .intro-asterisk {
		font-size: .27rem;
	}
	.hero .hero-footer .caption {
		font-size: .54rem;
	}
}


/* Navbar */
.navbar {
	height: 10vh;
	width: 100%;
	z-index: 2;
	top: 0;

	position: sticky;
	display: flex;
	flex-direction: row;

	justify-content: space-between;
	align-items: center;

	background-color: black;
	color: white;
}

.navbar h1 {
	margin-left: 20px;
}

.navbar .nav-links {
	list-style: none;
	display: flex;
	flex-direction: row;
}

.navbar .nav-links li {
	margin-right: 20px;
}

.navbar .nav-links #lightdark-symbol {
	margin-right: 10px;
	transform: scale(1.3);
	transform: rotate(135deg)
}

.navbar .nav-links a {
	text-decoration: none;
	color: white;
}

/* The switch */
.switch {
	position: relative;
	display: inline-block;
	height: 100%;
	aspect-ratio: 2 / 1;
	margin-right: 50px;
}

.switch input {
	opacity: 0;
	width: 0;
	height: 0;
}

.slider {
	position: absolute;
	cursor: pointer;
	top: 0; left: 0; right: 0; bottom: 0;
	background-color: #ccc;
	-webkit-transition-duration: 0.5s;
	-moz-transition-duration: 0.5s;
	-o-transition-duration: 0.5s;
}

.slider:before {
  position: absolute;
  content: "";
  aspect-ratio: 1 / 1;
  height: 80%;
  left: 10%; bottom: 10%;
  background-color: white;
	-webkit-transition-duration: 0.5s;
	-moz-transition-duration: 0.5s;
	-o-transition-duration: 0.5s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
	-webkit-transform: translateX(100%);
	-moz-transform: translateX(100%);
	-o-transform: translateX(100%);
}

.slider {
	border-radius: 2rem;
}

.slider:before {
  border-radius: 50%;
}

.navbar .nav-links li a,
.navbar .nav-links li a:after,
.navbar .nav-links li a:before {
	transition: all 500ms
}

.navbar .nav-links li a {
	position: relative;
}

.navbar .nav-links li a:after {
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	margin: auto;
	width: 0%;
	content: '.';
	color: transparent;
	background: white;
	height: 1px;
}
.navbar .nav-links li a:hover:after {
	width: 100%;
}

@media only screen and (max-width: 768px) {
	.navbar h1 {
		font-size: 1rem;
	}
	.navbar .nav-links li {
		font-size: .5rem;
		margin-right: 10px;
	}
	.navbar .nav-links #lightdark-symbol {
		margin-right: 5px;
	}
	.switch {
		margin-right: 25px;
	}
}


/* Self Information */
#self-info {
	background-color: var(--primary);
	color: var(--text);
}

.self-info {
	width: 60%;
	height: 80vh;

	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.self-info ul {
	list-style: none;
}

.self-info .title {
	text-align: center;
}

.self-info .title h1 {
	font-size: 3rem;
}

.self-info .title h2 {
	font-size: 2rem;
}

.self-info .info1 {
	text-align: left;
	border-left: 5px solid #888;
}

.self-info .info2 {
	text-align: right;
	border-right: 5px solid #888;
}

.self-info p {
	font-size: 1.5rem;
	margin-left: 8px;
	margin-right: 8px;
}

@media only screen and (max-width: 768px) {
	.self-info .title h1 {
		font-size: 1.6rem;
	}
	.self-info .title h2 {
		font-size: 1.06rem;
	}
	.self-info p {
		font-size: 0.8rem;
	}
}


/* Study Timeline */
#study-timeline {
	padding: 50px 0;
	background-color: var(--secondary);
	color: var(--text);
}

#study-timeline h1 {
	font-size: 5rem	;
	text-align: center;
}

#study-timeline .timeline {
	width: 80%;
	height: auto;
	max-width: 1000px;

	position: relative;
	margin: 0 auto;
	margin-top: 50px;
}

#study-timeline .timeline {
	list-style: none;
}

#study-timeline .timeline .timeline-content {
	padding: 20px;
	background-color: var(--primary);
	border-radius: 10px;
	margin: 20px 0;
	margin-bottom: 50px;
}

#study-timeline .timeline .timeline-content:first-child {
	margin-top: 100px;
}

#study-timeline .timeline .timeline-content:last-child {
	margin-bottom: 100px;
}

#study-timeline .timeline .timeline-content h2 {
	font-size: 1.6rem;
}

#study-timeline .timeline .timeline-content .date {
	position: absolute;
	font-size: 0.8rem;
	top: -30px;
}

#study-timeline .timeline .timeline-content hr {
	border: none;
	height: 2px;
	background: #888;
	margin: 5px 0;
}

#study-timeline .timeline .timeline-content ul {
	list-style: none;
}

#study-timeline .timeline .timeline-content li a {
	text-decoration: none;
	color: var(--text);
}

@media only screen and (min-width: 768px) {
	#study-timeline .timeline:before {
	    content: "";
	    position: absolute;
	    top: 0;
	    left: 50%;
	    transform: translateX(-50%);
	    width: 2px;
	    height: 100%;
	    background-color: var(--line_color);
	}

	#study-timeline .timeline .timeline-content {
		width: 50%;
		position: relative;
	}
		
	
	#study-timeline .timeline .timeline-content:nth-child(odd) {
		float: left;
		clear: right;
		right: 30px;
		border-radius: 20px 0 20px 20px;
	}
	

	#study-timeline .timeline .timeline-content:nth-child(even) {
		float: right;
		clear: left;
		left: 30px;
		border-radius: 0px 20px 20px 20px;
	}
}

@media only screen and (max-width: 768px) {
	#study-timeline h1 {
		font-size: 2.67rem;
	}
	#study-timeline .timeline .timeline-content h2 {
		font-size: 0.854rem;
	}
	#study-timeline .timeline .timeline-content .date {
		font-size: 0.43;
		top: -20px;
	}
}


/* Footer */
#contact {
	background-color: var(--primary);
}

.footer {
	width: 100%;
	height: 100vh;

	display: flex;
	flex-direction: column;

	justify-content: center;
	align-items: center;
	text-align: center;
}

.footer h1 {
	color: var(--text);
	font-size: 5rem;
}

.footer .contact-list {
	display: flex;
	flex-direction: row;
	justify-content: space-around;

	width: 35%;
	list-style: none;
	font-size: 3rem;
}

.footer .contact-list .contact {
	-webkit-transition-duration: 0.5s;
	-moz-transition-duration: 0.5s;
	-o-transition-duration: 0.5s;
}

.footer .contact-list .contact:hover {
	-webkit-transform: scale(1.4);
	-moz-transform: scale(1.4);
	-o-transform: scale(1.4);
}

.footer .contact-list a {
	text.decoration: none;
	color: var(--text);
}

.footer .contact-list #contact-email:hover {
	color: #c08403;
}

.footer .contact-list #contact-git:hover {
	color: var(--github);
}

.footer .contact-list #contact-ig:hover {
	color: #3f729b;
}

.footer .contact-list #contact-li:hover {
	color: #0976b4;
}

.footer .contact-list #contact-wa:hover {
	color: #25d366;
}

@media only screen and (max-width: 768px) {
	.footer h1 {
		font-size: 2.67rem;
	}
	.footer .contact-list {
		font-size: 1.6rem;
		width: 50%;
	}
}

